# job-description-matcher

./: pyproject.toml  readme.md
app/: main.py  matcher.py
